Beta 2.5.0 Added mGui Added Relics Added Tetra Added Tetranomicon Updated Better Biome Blend    1.1.9     -> 1.2.0 Updated Citadel               1.7.1     -> 1.7.2 Updated Flywheel              0.1.0     -> 0.1.1 Updated Just Enough Items     7.7.1.110 -> 7.7.1.111 Updated Quark                 2.4-314   -> 2.4-316 Updated Repurposed Structures 2.7.10    -> 2.7.12

--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -42,16 +42,17 @@
 	Chute = true
 	"Color Slime" = true
 	"Dispensers Place Blocks" = true
-	"Ender Watcher" = false
+	"Ender Watcher" = true
 	"Endermites Form Shulkers" = true
 	"Feeding Trough" = true
-	Gravisand = false
+	Gravisand = true
 	"Iron Rod" = true
 	"Metal Buttons" = true
 	"Obsidian Plate" = true
 	"Pistons Move Tile Entities" = true
 	"Redstone Circuit" = true
 	"Weather Sensor" = true
+	"Jukebox Automation" = true
 
 	[automation.chain_linkage]
 		#Can vehicle-linking chains be used for crafting chain armor?
@@ -205,6 +206,7 @@
 		"Replace Worldgen Chests" = true
 		#Chests to put in each structure. The format per entry is "structure=chest", where "structure" is a structure ID, and "chest" is a block ID, which must correspond to a standard chest block.
 		"Structure Chests" = ["minecraft:village_plains=quark:oak_chest", "minecraft:igloo=quark:spruce_chest", "minecraft:village_snowy=quark:spruce_chest", "minecraft:village_taiga=quark:spruce_chest", "minecraft:desert_pyramid=quark:birch_chest", "minecraft:jungle_pyramid=quark:jungle_chest", "minecraft:village_desert=quark:jungle_chest", "minecraft:village_savanna=quark:acacia_chest", "minecraft:mansion=quark:dark_oak_chest", "minecraft:pillager_outpost=quark:dark_oak_chest", "minecraft:ruined_portal=quark:crimson_chest", "minecraft:bastion_remnant=quark:crimson_chest", "minecraft:fortress=quark:nether_brick_chest", "minecraft:endcity=quark:purpur_chest", "bettermineshafts:mineshaft=quark:oak_chest", "cobbler:shulker_factory=quark:purpur_chest", "conjurer_illager:theatre=quark:dark_oak_chest", "dungeoncrawl:dungeon=quark:oak_chest", "dungeons_plus:bigger_dungeon=quark:oak_chest", "dungeons_plus:end_ruins=quark:purpur_chest", "dungeons_plus:leviathan=quark:jungle_chest", "dungeons_plus:snowy_temple=quark:spruce_chest", "dungeons_plus:soul_prison=quark:warped_chest", "dungeons_plus:tower=quark:oak_chest", "dungeons_plus:warped_garden=quark:warped__chest", "hunterillager:hunterhouse=quark:oak_chest", "iceandfire:gorgon_temple=quark:jungle_chest", "pandoras_creatures:end_prison=quark:purpur_chest", "repurposed_structures:fortress_jungle=quark:jungle_chest", "repurposed_structures:igloo_grassy=quark:oak_chest", "repurposed_structures:igloo_stone=quark:spruce_chest", "repurposed_structures:mineshaft_birch=quark:birch_chest", "repurposed_structures:mineshaft_desert=quark:jungle_chest", "repurposed_structures:mineshaft_end=quark:purpur_chest", "repurposed_structures:mineshaft_icy=quark:spruce_chest", "repurposed_structures:mineshaft_jungle=quark:jungle_chest", "repurposed_structures:mineshaft_nether=quark:nether_brick_chest", "repurposed_structures:mineshaft_ocean=quark:prismarine_chest", "repurposed_structures:mineshaft_savanna=quark:acacia_chest", "repurposed_structures:mineshaft_stone=quark:spruce_chest", "repurposed_structures:mineshaft_swamp_or_dark_forest=quark:dark_oak_chest", "repurposed_structures:mineshaft_taiga=quark:spruce_chest", "repurposed_structures:outpost_badlands=quark:dark_oak_chest", "repurposed_structures:outpost_birch=quark:birch_chest", "repurposed_structures:outpost_crimson=quark:crimson_chest", "repurposed_structures:outpost_desert=quark:jungle_chest", "repurposed_structures:outpost_giant_tree_taiga=quark:spruce_chest", "repurposed_structures:outpost_icy=quark:spruce_chest", "repurposed_structures:outpost_jungle=quark:jungle_chest", "repurposed_structures:outpost_nether_brick=quark:nether_brick_chest", "repurposed_structures:outpost_snowy=quark:spruce_chest", "repurposed_structures:outpost_warped=quark:warped_chest", "repurposed_structures:pyramid_badlands=quark:dark_oak_chest", "repurposed_structures:pyramid_nether=quark:nether_brick_chest", "repurposed_structures:ruined_portal_end=quark:purpur_chest", "repurposed_structures:shipwreck_crimson=quark:crimson_chest", "repurposed_structures:shipwreck_end=quark:purpur_chest", "repurposed_structures:shipwreck_nether_bricks=quark:nether_brick_chest", "repurposed_structures:shipwreck_warped=quark:warped_chest", "repurposed_structures:stronghold_nether=quark:nether_brick_chest", "repurposed_structures:stronghold_stonebrick=quark:oak_chest", "repurposed_structures:temple_nether_basalt=quark:nether_brick_chest", "repurposed_structures:temple_nether_crimson=quark:crimson_chest", "repurposed_structures:temple_nether_soul=quark:warped_chest", "repurposed_structures:temple_nether_warped=quark:warped_chest", "repurposed_structures:temple_nether_wasteland=quark:nether_brick_chest", "repurposed_structures:village_badlands=quark:dark_oak_chest", "repurposed_structures:village_birch=quark:birch_chest", "repurposed_structures:village_crimson=quark:crimson_chest", "repurposed_structures:village_dark_oak=quark:dark_oak_chest", "repurposed_structures:village_giant_taiga=quark:spruce_chest", "repurposed_structures:village_jungle=quark:jungle_chest", "repurposed_structures:village_mountains=quark:spruce_chest", "repurposed_structures:village_oak=quark:oak_chest", "repurposed_structures:village_swamp=quark:oak_chest", "repurposed_structures:village_warped=quark:warped_chest", "valhelsia_structures:castle=quark:spruce_chest", "valhelsia_structures:castle_ruin=quark:oak_chest", "valhelsia_structures:desert_house=quark:spruce_chest", "valhelsia_structures:forge=quark:spruce_chest", "valhelsia_structures:player_house=quark:oak_chest", "valhelsia_structures:small_castle=quark:oak_chest", "valhelsia_structures:small_dungeon=quark:oak_chest", "valhelsia_structures:tower_ruin=quark:spruce_chest"]
+		"Enable Reverting Wooden Chests" = true
 
 	[building.variant_ladders]
 		"Change Names" = true
@@ -225,7 +227,7 @@
 [management]
 	"Chests In Boats" = true
 	"Easy Transfering" = true
-	"Hotbar Changer" = false
+	"Hotbar Changer" = true
 	"Inventory Sorting" = true
 	"Item Sharing" = true
 	"Right Click Armor" = true
@@ -246,7 +248,7 @@
 
 [tools]
 	"Ancient Tomes" = true
-	"Bottled Cloud" = false
+	"Bottled Cloud" = true
 	Camera = true
 	"Color Runes" = true
 	"Pathfinder Maps" = true
@@ -255,15 +257,14 @@
 	"Slime In A Bucket" = true
 	Trowel = true
 	Abacus = true
+	"Ambient Discs" = true
 
 	[tools.ancient_tomes]
-		"Apply Cost" = 35
 		#Set to 0 to not generate in Dungeons
 		"Dungeon Weight" = 20
 		"Item Quality" = 2
 		#Set to 0 to not generate in Stronghold Libraries
 		"Library Weight" = 30
-		"Merge Cost" = 35
 		#Set to 0 to not generate in Monster Boxes
 		"Monster Box Weight" = 5
 		"Valid Enchantments" = ["minecraft:feather_falling", "minecraft:thorns", "minecraft:sharpness", "minecraft:smite", "minecraft:bane_of_arthropods", "minecraft:knockback", "minecraft:fire_aspect", "minecraft:looting", "minecraft:sweeping", "minecraft:efficiency", "minecraft:unbreaking", "minecraft:fortune", "minecraft:power", "minecraft:punch", "minecraft:luck_of_the_sea", "minecraft:lure", "minecraft:loyalty", "minecraft:riptide", "minecraft:impaling", "minecraft:piercing"]
@@ -275,6 +276,8 @@
 		"Nether Fortress Weight" = 0
 		#Set to 0 to not generate in Underwater Ruins
 		"Underwater Ruin Weight" = 0
+		"Normal Upgrade Cost" = 10
+		"Limit Break Upgrade Cost" = 30
 
 	[tools.bottled_cloud]
 		"Cloud Level Bottom" = 127
@@ -333,10 +336,13 @@
 		"Show All Variants In Creative" = false
 
 	[tools.trowel]
-		#Amount of blocks placed is this value + 1. Default is 255 (4 stacks).
+		#Amount of blocks placed is this value + 1.
 		#Set to 0 to make the Trowel unbreakable
 		#Allowed values: [0,)
 		"Trowel Max Durability" = 255
+
+	[tools.ambient_discs]
+		"Drop On Spider Kill" = true
 
 [tweaks]
 	"Armed Armor Stands" = true
@@ -349,14 +355,14 @@
 	"Dragon Scales" = true
 	Emotes = true
 	"Enhanced Ladders" = true
-	"Glass Shard" = false
+	"Glass Shard" = true
 	"Hoe Harvesting" = true
 	"Improved Sleeping" = true
 	"Infinity Bucket" = true
 	"Lock Rotation" = true
 	"Note Block Mob Sounds" = true
 	"Pat The Dogs" = true
-	"Poison Potato Usage" = false
+	"Poison Potato Usage" = true
 	"Reacharound Placing" = true
 	"Replace Scaffolding" = true
 	"Sign Editing" = true
@@ -368,6 +374,7 @@
 	"Villagers Follow Emeralds" = true
 	"Lava Bucket As Trash" = true
 	"Better Elytra Rocket" = true
+	"More Banner Layers" = true
 
 	[tweaks.automatic_recipe_unlock]
 		"Disable Recipe Book" = false
@@ -476,10 +483,14 @@
 		#Can torches can be used as fuel in furnaces?
 		"Torches Burn" = true
 
+	[tweaks.more_banner_layers]
+		#Allowed values: [1,16]
+		"Layer Limit" = 16
+
 [world]
 	"Big Dungeon" = true
 	"Big Stone Clusters" = true
-	Biotite = false
+	Biotite = true
 	"Blossom Trees" = true
 	"Brimstone Underground Biome" = true
 	"Cave Crystal Underground Biome" = true
@@ -501,8 +512,9 @@
 	"Slime Underground Biome" = true
 	Speleothems = true
 	"Spider Nest Underground Biome" = true
-	"Spiral Spires" = false
+	"Spiral Spires" = true
 	"Underground Clay" = true
+	Deepslate = true
 
 	[world.big_dungeon]
 		"Chest Chance" = 0.5
@@ -857,7 +869,7 @@
 				"Is Blacklist" = false
 
 	[world.biotite]
-		"Clusters Per Dragon Tick" = 16
+		"Clusters Per Dragon Tick" = 4
 		"Dragon Ticks Per Cluster" = 1
 		"Generate Naturally" = false
 		"Generate On Dragon Death" = true
@@ -868,9 +880,9 @@
 
 		[world.biotite.ore_settings]
 			#Allowed values: [0,)
-			"Cluster Count" = 16
+			"Cluster Count" = 8
 			#Allowed values: [0,)
-			"Cluster Size" = 14
+			"Cluster Size" = 8
 			#Allowed values: [0,255]
 			"Max Height" = 64
 			#Allowed values: [0,255]
@@ -1551,6 +1563,7 @@
 		"Speleothems Per Chunk In Nether" = 12
 		"Tries Per Chunk" = 60
 		"Tries Per Chunk In Nether" = 4
+		"Small Speleothems Increase Fall Damage" = true
 
 		[world.speleothems.dimensions]
 			Dimensions = []
@@ -1629,6 +1642,15 @@
 			"Max Height" = 60
 			#Allowed values: [0,255]
 			"Min Height" = 20
+
+	[world.deepslate]
+		"Sheet Height" = 18
+		"Sheet Height Variance" = 6
+		"Sheet Y Start" = 0
+
+		[world.deepslate.dimensions]
+			"Is Blacklist" = false
+			Dimensions = ["minecraft:overworld"]
 
 [mobs]
 	Crabs = true
@@ -1853,14 +1875,14 @@
 	"Variant Animal Textures" = true
 
 	[client.greener_grass]
-		"Absolute Values" = false
 		"Affect Leaves" = true
-		"Alpha Grass" = false
 		"Block List" = ["minecraft:large_fern", "minecraft:tall_grass", "minecraft:grass_block", "minecraft:fern", "minecraft:grass", "minecraft:potted_fern", "minecraft:sugar_cane"]
-		"Blue Shift" = -10
-		"Green Shift" = 10
 		"Leaves List" = ["minecraft:spruce_leaves", "minecraft:birch_leaves", "minecraft:oak_leaves", "minecraft:jungle_leaves", "minecraft:acacia_leaves", "minecraft:dark_oak_leaves", "minecraft:vine"]
-		"Red Shift" = -10
+
+		[client.greener_grass.color_matrix]
+			R = [0.89, 0.0, 0.0]
+			G = [0.0, 1.11, 0.0]
+			B = [0.0, 0.0, 0.89]
 
 	[client.improved_tooltips]
 		"Attribute Tooltips" = true
@@ -1967,6 +1989,8 @@
 		"Piece Price Scale" = 9
 		#Set to false to disable the tooltip for items with pending enchantments
 		"Show Tooltip" = true
+		#If you set this to false, the vanilla Enchanting Table will no longer automatically convert to the Matrix Enchanting table. You'll have to add a recipe for the Matrix Enchanting Table to make use of this.
+		"Automatically Convert" = true
 
 	[oddities.pipes]
 		#When items eject or are absorbed by pipes, should they make sounds?
